--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- MatriXpert Title -->
-    <div id="title">MatriXpert</div>
+    <div id="title">MatrixMinds</div>
 
     <h2>Perform Various Matrix Operations Easily</h2>
 
