--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- MatriXpert Title -->
     <div id="title">MatrixMinds</div>
 
+    <!-- 📢 Perform Matrix Operations Easily -->
+    <h2 id="subtitle">Perform Various Matrix Operations Easily</h2>
+
     <!-- 🎨 Translucent Box for Options -->
     <div class="options-container">
 
