--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 <body>
-    <!-- MatriXpert Title -->
-    <div id="title">MatrixMinds</div>
+    <!-- ⚡ MatriXpert Title -->
+    <div id="title">⚡ MatrixMinds ⚡</div>
 
     <!-- 📢 Perform Matrix Operations Easily -->
     <h2 id="subtitle">Perform Various Matrix Operations Easily</h2>
@@ -18,60 +18,65 @@
     <!-- 🎨 Translucent Box for Options -->
     <div class="options-container">
 
-        <!-- Matrix A Input Section -->
-        <h2>Matrix A</h2>
-        <label for="rowsA">Rows:</label>
-        <input type="number" id="rowsA" min="1" value="2">
-        <label for="colsA">Columns:</label>
-        <input type="number" id="colsA" min="1" value="2">
-        <button onclick="generateMatrix('A')">Generate Matrix A</button>
-        
-        <!-- Matrix Container for Alignment -->
-        <div class="matrix-container">
-            <div id="matrixA" class="matrix-grid"></div>
+        <!-- Matrix Input Section Container -->
+        <div class="matrix-wrapper">
 
-            <!-- Matrix B Input Section -->
-            <div>
+            <!-- Matrix A Section -->
+            <div class="matrix-box">
+                <h2>Matrix A</h2>
+                <label for="rowsA">Rows:</label>
+                <input type="number" id="rowsA" min="1" value="2">
+                <label for="colsA">Columns:</label>
+                <input type="number" id="colsA" min="1" value="2">
+                <button onclick="generateMatrix('A')">⚡ Generate Matrix A</button>
+                <div id="matrixA" class="matrix-grid"></div>
+            </div>
+
+            <!-- Matrix B Section -->
+            <div class="matrix-box">
                 <h2>Matrix B</h2>
                 <label for="rowsB">Rows:</label>
                 <input type="number" id="rowsB" min="1" value="2">
                 <label for="colsB">Columns:</label>
                 <input type="number" id="colsB" min="1" value="2">
-                <button onclick="generateMatrix('B')">Generate Matrix B</button>
+                <button onclick="generateMatrix('B')">⚡ Generate Matrix B</button>
                 <div id="matrixB" class="matrix-grid"></div>
             </div>
         </div>
 
         <!-- Matrix Operations Section -->
-        <h3>Matrix Operations</h3>
-        <button onclick="performOperation('add')">Add</button>
-        <button onclick="performOperation('subtract')">Subtract</button>
-        <button onclick="performOperation('multiply')">Multiply</button>
-        <button onclick="calculateDeterminant('A')">Determinant of A</button>
-        <button onclick="calculateDeterminant('B')">Determinant of B</button>
-        <button onclick="calculateInverse('A')">Inverse of A</button>
-        <button onclick="calculateInverse('B')">Inverse of B</button>
-        <button onclick="calculateEigenvalues('A')">Eigenvalues of A</button>
-        <button onclick="calculateEigenvalues('B')">Eigenvalues of B</button>
-        <button onclick="generateLaTeX('A', 'A')">Generate LaTeX for A</button>
-        <button onclick="generateLaTeX('B', 'B')">Generate LaTeX for B</button>
+        <h3>⚙️ Matrix Operations</h3>
+        <div class="button-container">
+            <button onclick="performOperation('add')">➕ Add</button>
+            <button onclick="performOperation('subtract')">➖ Subtract</button>
+            <button onclick="performOperation('multiply')">✖️ Multiply</button>
+            <button onclick="calculateDeterminant('A')">🧮 Determinant of A</button>
+            <button onclick="calculateDeterminant('B')">🧮 Determinant of B</button>
+            <button onclick="calculateInverse('A')">♾️ Inverse of A</button>
+            <button onclick="calculateInverse('B')">♾️ Inverse of B</button>
+            <button onclick="calculateEigenvalues('A')">💡 Eigenvalues of A</button>
+            <button onclick="calculateEigenvalues('B')">💡 Eigenvalues of B</button>
+            <button onclick="generateLaTeX('A', 'A')">📚 Generate LaTeX for A</button>
+            <button onclick="generateLaTeX('B', 'B')">📚 Generate LaTeX for B</button>
+        </div>
     </div>
 
-    <!-- 📦 Result Display Section -->
-    <h3>Result</h3>
-    <div id="result-container">
+    <!-- 📦 Result Section -->
+    <h3>📊 Result</h3>
+    <div class="result-container">
         <div id="result" class="matrix-grid"></div>
     </div>
 
     <!-- 📚 LaTeX Output Section -->
-    <h3>LaTeX Output</h3>
-    <div id="latexResult"></div>
+    <h3>📚 LaTeX Output</h3>
+    <div id="latexResult" class="latex-box"></div>
 
-    <!-- Footer Section -->
+    <!-- 📜 Footer Section -->
     <footer>
         © 2025 MatrixMinds. All Rights Reserved.
     </footer>
 
+    <!-- 📜 Include JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
