--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
             <button onclick="calculateEigenvalues('B')">💡 Eigenvalues of B</button>
             <button onclick="generateLaTeX('A', 'A')">📚 Generate LaTeX for A</button>
             <button onclick="generateLaTeX('B', 'B')">📚 Generate LaTeX for B</button>
+
+            <!-- ✅ Added Buttons for New Functionalities -->
+            <button onclick="calculateEigenvectors('A')">🔢 Eigenvectors of A</button>
+            <button onclick="calculateEigenvectors('B')">🔢 Eigenvectors of B</button>
+            <button onclick="diagonalizeMatrix('A')">📐 Diagonalization of A</button>
+            <button onclick="diagonalizeMatrix('B')">📐 Diagonalization of B</button>
+            <button onclick="calculateRank('A')">🏆 Rank of A</button>
+            <button onclick="calculateRank('B')">🏆 Rank of B</button>
+            <button onclick="calculateIndexSignature('A')">📊 Index & Signature of A</button>
+            <button onclick="calculateIndexSignature('B')">📊 Index & Signature of B</button>
         </div>
     </div>
 
